--- a/engineering.html
+++ b/engineering.html
@@ -22,9 +22,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
- 
 </head>
 
 <body>
@@ -78,11 +75,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Diploma Engineering
+            Diploma
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -116,11 +113,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Undergraduate Engineering
+            Undergraduate 
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -560,11 +557,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Postgraduate Engineering
+            Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
