--- a/law.html
+++ b/law.html
@@ -74,11 +74,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Undergraduate LAW
+            Undergraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -114,11 +114,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Postgraduate LAW
+            Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
