--- a/mba.html
+++ b/mba.html
@@ -18,9 +18,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
-
 </head>
 
 <body>
@@ -41,9 +38,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -73,11 +70,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
             Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -87,7 +84,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/facility-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/facility-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA Facility Management </label>
@@ -103,7 +100,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/banking-finance-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/banking-finance-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA in Banking, Finance & Insurance</label>
@@ -119,7 +116,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/export-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/export-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA in Export Management</label>
@@ -136,7 +133,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/finance-management.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/finance-management.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA in Finance Management</label>
@@ -152,7 +149,7 @@
         </div>
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/healthcare-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/healthcare-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA In Healthcare Management </label>
@@ -168,7 +165,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/human-resource-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/human-resource-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA in Human Resource (HR)</label>
@@ -184,7 +181,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/logistics-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/logistics-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA In Logistic Management</label>
@@ -200,7 +197,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/organizational-studies.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/organizational-studies.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA in Organizational Studies </label>
@@ -216,7 +213,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/retail-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/retail-management-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MBA in Retail Management </label>
