--- a/medical.html
+++ b/medical.html
@@ -12,7 +12,6 @@
   
   " />
   <link rel="stylesheet" href="dist/css/bootstrap.css">
-  <link rel="stylesheet" href="faicon/css/all.css">
   <link rel="stylesheet" href="blog.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -20,8 +19,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
 </head>
 
 <body>
@@ -42,9 +39,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -73,11 +70,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Undergraduate Medical
+            Undergraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -87,7 +84,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bams-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bams-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Ayurvedic Medicine and Surgery </label>
@@ -103,7 +100,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/bds-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bds-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Dental Surgery</label>
@@ -119,7 +116,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bhms-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bhms-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Homeopathic Medicine and Surgery</label>
@@ -136,7 +133,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/mbbs-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/mbbs-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Medicine and Bachelor of Surgery</label>
@@ -152,7 +149,7 @@
         </div>
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bums-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bums-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Unani Medicine (BUMS) and Surgery</label>
@@ -169,7 +166,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/bsms-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bsms-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.S.M.S (Bachelor of Siddha Medicine and Surgery)</label>
@@ -186,7 +183,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/bpt-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bpt-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Physiotherapy</label>
@@ -209,11 +206,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Postgraduate Medical
+            Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -223,7 +220,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/doctor-of-medicine-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/doctor-of-medicine-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Doctor of Medicine</label>
@@ -239,7 +236,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/d-pharama-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/d-pharama-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Doctorate of Pharmacy (Pharm D.)</label>
@@ -255,7 +252,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/mds-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/mds-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Master of Dental Surgery (M.D.S)</label>
@@ -271,9 +268,9 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+      <!--<div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="#" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Master of Medicine in Homeopathy</label>
@@ -286,10 +283,10 @@
               </div>
             </a>
           </div>
-        </div>
+        </div>-->
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/md-unani-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/md-unani-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Master of Medicine in Unani</label>
@@ -305,7 +302,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/md-anaesthesia-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/md-anaesthesia-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MD Anaesthesia Course</label>
@@ -322,7 +319,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/md-ayurveda-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">MSc Ayurvedic Medicine (MD Ayurveda)</label>
