--- a/arts-humanities.html
+++ b/arts-humanities.html
@@ -22,7 +22,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </head>
 
@@ -78,11 +77,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Undergraduate Engineering
+            Undergraduate 
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -181,7 +180,7 @@
                 <label class="title fz-20">Bachelor of Arts in Dance or B.A</label>
                 <div class="desc">
                   <p>
-                   pending meta and title
+                    BA Dance or Bachelor of Arts in Dance is a full-time undergraduate Acting, Dance & Drama course of 3 years which is divided into six semesters of study.
                   </p>
                 </div>
                 <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -199,11 +198,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
-            Postgraduate Engineering
+            Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -215,7 +214,7 @@
           <label class="title fz-20">Master of Arts (MA)</label>
           <div class="desc">
             <p>
-             pending meta and title
+              Master of Arts (abbreviated MA or M.A.) degrees are graduate-level achievements conferred by universities around the world. 
             </p>
           </div>
           <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
