--- a/designing.html
+++ b/designing.html
@@ -18,9 +18,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
-
 </head>
 
 <body>
@@ -73,11 +70,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
             Undergraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -104,7 +101,7 @@
         </div>
         <div class="col-md-6">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bds-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bachelor-of-designing-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Designing </label>
@@ -125,11 +122,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
             Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
