--- a/technical.html
+++ b/technical.html
@@ -42,9 +42,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -75,11 +75,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
             Undergraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/bsc-computer-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/bsc-computer-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Sc Computer Science</label>
@@ -106,7 +106,7 @@
 
         <div class="col-md-6">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="/course/bca-course.html" style="text-decoration: none;" class="icon-box text-center"
+              <a href="https://eduprov.com/course/bca-course.html" style="text-decoration: none;" class="icon-box text-center"
                 data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">Bachelor of Computer Application</label>
@@ -134,11 +134,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center">
+        <h2 class="text-center">
           <button class="btn btn-primary btn-large text-white">
             Postgraduate
           </button>
-        </h1>
+        </h2>
       </div>
     </div>
   </div>
@@ -148,7 +148,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/mca-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/mca-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Master of Computer Application</label>
