--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         <div class="row">
           <div class="col-md-12 mt-5 pt-1">
             
-            <h1 style="font-weight: bold" class="mt-5 text-center">Eduprov Educational Institute</h1>
+            <h1 style="font-weight: bold" class="mt-5 text-center">EDUPROV EDUCATIONAL INSTITUTE</h1>
             
             <p class="text-justify text-center text-white mt-5" style="font-weight: bold">
-              Hit The Best Top Notched Universities, Get a Grip On Admission
-              Guidance And Travel The World At Eduprov Educational Institute
+              HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
+              GUIDANCE AND TRAVEL THE WORLD AT EDUPROV EDUCATIONAL INSTITUTE
               <br />
               <label class="mt-3"><a href="#back"><button class="btn btn-info ">CALL BACK</button></a></label>
             </p>
